# Code_Budokan

./: .gitignore  INDEX.md
.claude/: launch.json  settings.local.json
6502-asm/: 00-overview.md  01-foundations.md  02-addressing-arithmetic.md  03-subroutines-stack.md  04-memory-mapped-io.md  05-interrupts.md  06-capstones-baremetal.md  07-game-math.md  08-c64-port.md  09-nes-port.md  10-apple2-port.md  11-beyond-this-guide.md  12-final-assessment.md  99-resources.md
algol/: 00-overview.md  01-foundations-history.md  02-block-structure.md  03-procedures-recursion.md  04-control-dangling-else.md  05-call-by-name.md  06-arrays-data.md  07-demonstrations.md  08-beyond-this-guide.md  09-final-assessment.md  99-resources.md
apl/: 00-overview.md  01-foundations-arrays-shape.md  02-reduction-scan.md  03-capstone-statistics-engine.md  04-dfns.md  05-outer-product-transpose-reshape.md  06-capstone-distance-table.md  07-grade-boolean-masking.md  09-beyond-this-guide.md  (+3 more)
python/: 00-overview.md  01-foundations.md  02-comprehensions-generators-iterators.md  03-decorators-context-managers.md  04-dataclasses-typing.md  05-capstone-data-pipeline.md  06-packaging-testing.md  07-capstone-cli-tool.md  08-numpy-vectorization.md  09-pytorch-tensors-autograd.md  10-capstone-autograd-regression.md  11-pytorch-neural-networks.md  12-capstone-pytorch-nn.md  13-keras.md  14-capstone-keras-nn.md  15-beyond-this-guide.md  16-final-assessment.md  99-resources.md  README.md  pyproject.toml
python/src/code_rookie_python/: cli.py  pipeline.py
python/tests/: test_cli.py  test_pipeline.py
(+391 files in other folders)
